.tempCodeRunnerFile.txt

Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Tue 14 Jan 2020 10:13:24 CST
Input first number: Input second number: Input third number: Neither all are equal or different
